--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -830,7 +830,7 @@
 
                         <ul>
                             <li> Session 1: Each team will do a 6 minute
-                                 presentation (plus 4 minute QA).
+                                 presentation (+ 4 minute QA).
                             </li>
                         </ul>
 
@@ -842,7 +842,7 @@
 
                         <ul>
                             <li> Session 2: Each team will do a 6 minute
-                                 presentation (plus 4 minute QA).
+                                 presentation (+ 4 minute QA).
                             </li>
                         </ul>
 
@@ -1147,7 +1147,7 @@
 
                         <ul>
                             <li> Session 1: Each team will do a 7 minute
-                                 presentation (plus 3 minute QA).</font>
+                                 presentation (+ 3 minute QA).</font>
                             </li>
                         </ul>
 
@@ -1159,7 +1159,7 @@
 
                         <ul>
                             <li> Session 2: Each team will do a 7 minute
-                                 presentation (plus 3 minute QA).</font>
+                                 presentation (+ 3 minute QA).</font>
                             </li>
                         </ul>
 
@@ -1259,7 +1259,7 @@
 
                         <ul>
                             <li> Session 1: Each team will do a 10 minute
-                                 presentation (no QA as it is an exam). </li>
+                                 presentation (no QA). </li>
                         </ul>
 
                     </td>
@@ -1270,7 +1270,7 @@
 
                         <ul>
                             <li> Session 2: Each team will do a 10 minute
-                                 presentation (no QA as it is an exam). </li>
+                                 presentation (no QA). </li>
                         </ul>
 
                     </td>
