--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -118,6 +118,12 @@
         </table>
     </center>
 
+    <p>This page conforms to
+      <a class="paperlink" href="https://www2.ed.gov/policy/gen/guid/fpco/ferpa/students.html" target="_blank">
+       the FERPA policy</a> of disclosure of education records.
+       All the students listed as (co-)presenters provide the written consents.
+     </p>
+
     <div class="readings">
 
         <h2>Course Introduction</h2>
