--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -820,6 +820,22 @@
                                   Communications of the ACM (CACM), Vol. 57 No. 9, Pages 48-55, September 2014.
                                   <p></p>
                             </li>
+                            <li> (Optional) related papers:
+                                 <p></p>
+                              <ul>
+                                <li> E. Brewer,
+                                    <a class="paperlink" href="https://ieeexplore.ieee.org/document/6133253" target="_blank">CAP Twelve
+                                      Years Later: How the "Rules" Have Changed</a>,
+                                      IEEE Computer, 45(2):23-29, February 2012.
+                                    <p></p>
+                                </li>
+                                <li> E. Brewer,
+                                    <a class="paperlink" href="https://ai.google/research/pubs/pub45855" target="_blank">Spanner, TrueTime & The CAP Theorem</a>,
+                                      Technical report, Google Inc., 2017.
+                                    <p></p>
+                                </li>
+                              </ul>
+                            </li>
                         </ul>
                     </td>
                 </tr>
