--- a/publication.html
+++ b/publication.html
@@ -79,7 +79,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 						<span style="font-size: 12pt;">
-							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [To appear]
+							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="papers/osdi18.pdf" target="_blank">pdf</a> | <a href="papers/osdi18.ps" target="_blank">ps</a> | <a href="papers/osdi18.bib" target="_blank">bib</a>]
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
