--- a/publication.html
+++ b/publication.html
@@ -63,7 +63,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [To appear]
+							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="papers/imc18.pdf" target="_blank">pdf</a> | <a href="papers/imc18.ps" target="_blank">ps</a> | <a href="papers/imc18.bib" target="_blank">bib</a>]
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Yee Jiun Song
 						<br>
