--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1026,6 +1026,12 @@
                         <ul>
                             <li>
                               <b>
+                                <a href="http://mir.cs.illinois.edu/legunsen/" target="_blank">Owolabi Legunsen</a> will give a guest lecture on software testing.
+                              </b>
+                              <p></p>
+                            </li>
+                            <li>
+                              <b>
                                 <a href="https://www.linkedin.com/in/qingrong-chen-680155150/" target="_blank">Qingrong</a> will co-present DeepXplore and share his experiences working on ML reliability.
                               </b>
                               <p></p>
