--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1002,6 +1002,11 @@
                                       In Proceedings of the 21st USENIX Large Installation System Administration Conference (LISA '07), November 2007.
                                     <p></p>
                                   </li>
+                                  <li> Štěpán Davidovič and Betsy Beyer,
+                                    <a class="paperlink" href="https://cacm.acm.org/magazines/2018/5/227185-canary-analysis-service/fulltext" target="_blank">Canary Analysis Service</a>,
+                                      Communications of the ACM (CACM), May 2018.
+                                      <p></p>
+                                  </li>
                                   <li> E. Zhai, R. Piskac, R. Gu, X. Lao, and X. Wang,
                                     <a class="paperlink" href="http://www.cs.yale.edu/homes/zhai-ennan/oopsla17-final.pdf" target="_blank">An Auditing Language for
                                       Preventing Correlated Failures in the Cloud</a>,
