--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1002,7 +1002,7 @@
                                       In Proceedings of the 21st USENIX Large Installation System Administration Conference (LISA '07), November 2007.
                                     <p></p>
                                   </li>
-                                  <li> Štěpán Davidovič and Betsy Beyer,
+                                  <li> Š. Davidovič and B. Beyer,
                                     <a class="paperlink" href="https://cacm.acm.org/magazines/2018/5/227185-canary-analysis-service/fulltext" target="_blank">Canary Analysis Service</a>,
                                       Communications of the ACM (CACM), May 2018.
                                       <p></p>
