--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1353,7 +1353,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="9th">Thu<br>10/25</a></td>
+                    <td class="date">TBD</td>
                     <td class="papers">
                         <ul>
                             <li> H. Liu, X. Wang, G. Li, S. Lu, F. Ye, and C. Tian,
@@ -1375,6 +1375,38 @@
                                 <a class="paperlink" href="https://cacm.acm.org/magazines/2018/4/226371-lessons-from-building-static-analysis-tools-at-google/fulltext" target="_blank">Lessons
     from Building Static Analysis Tools at Google</a>, Communications of the ACM (CACM), Vol. 61 No. 4, Pages 58-66, April 2018.
 
+                            </li>
+                            <li> (Optional) related papers on bug detection:
+                                 <p></p>
+                              <ul>
+                                <li>C. Cadar, D. Dunbar, D. Engler,
+                                <a class="paperlink" href="https://web.stanford.edu/~engler/klee-osdi-2008.pdf" target="_blank">KLEE: Unassisted and Automatic
+                                  Generation of High-Coverage Tests for Complex Systems Programs</a>,
+                                In Proceedings of the 8th USENIX Symposium on
+                                Operating Systems Design and Implementation (OSDI '08), December 2008.
+                                  <p></p>
+                                </li>
+                                <li>Z. Li, S. Lu, S. Myagmar and Y. Zhou,
+                                <a class="paperlink" href="http://opera.ucsd.edu/paper/OSDI04-CPMiner.pdf" target="_blank">CP-Miner:
+                                  A Tool for Finding Copy-paste and Related Bugs in Operating System Code</a>,
+                                  In Proceedings of the 6th USENIX Symposium on
+                                  Operating Systems Design and Implementation
+                                  (OSDI '04), December 2004.
+                                  <p></p>
+                                </li>
+                                <li>D. Engler, D. Y. Chen, S. Hallem, A. Chou, and B. Chelf,
+                                <a class="paperlink" href="https://web.stanford.edu/~engler/deviant-sosp-01.pdf" target="_blank">Bugs as Deviant Behavior:
+                                  A General Approach to Inferring Errors in Systems Code</a>,
+                                In Proceedings of the the 18th ACM Symposium on Operating Systems Principles (SOSP '01), October 2001.
+                                  <p></p>
+                                </li>
+                                <li>S. Savage, M. Burrows, G. Nelson, P. Sobalvarro, and T. Anderson,
+                                <a class="paperlink" href="https://cseweb.ucsd.edu/~savage/papers/Sosp97.pdf" target="_blank">Eraser:
+                                  A Dynamic Data Race Detector for Multi-Threaded Programs</a>,
+                                In Proceedings of the the 16th ACM Symposium on Operating Systems Principles (SOSP '97), October 1997.
+                                  <p></p>
+                                </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
