--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -895,6 +895,18 @@
                                 In Proceedings of the 23rd ACM Symposium on Operating Systems
                                 Principles (SOSP '11), October 2011.
                           </li>
+                          <li> (Optional) related papers:
+                               <p></p>
+                            <ul>
+                              <li> P. Huang, C. Guo, L. Zhou, J. R. Lorch,
+                                   Y. Dang, M. Chintalapati, and R. Yao,
+                                  <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3102980.3103005" target="_blank">Gray
+                                    Failure: The Achilles' Heel of Cloud-Scale Systems</a>,
+                                    In Proceedings of the 16th Workshop on Hot Topics in Operating Systems (HotOS '17), May 2017.
+                                  <p></p>
+                              </li>
+                            </ul>
+                          </li>
                       </ul>
                   </td>
               </tr>
