--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -756,7 +756,7 @@
                                  <p></p>
                               <ul>
                                   <li> J. Meza, T. Xu, K. Veeraraghavan, and Y. J. Song,
-                                      <a class="paperlink" href="" target="_blank">A Large-Scale Study of Data Center Network Reliability</a>,
+                                      <a class="paperlink" href="https://www.usenix.org/conference/osdi18/presentation/veeraraghavan" target="_blank">A Large-Scale Study of Data Center Network Reliability</a>,
                                         In Proceedings of the 2018 Internet Measurement Conference (IMC '17), Oct. 31 - Nov. 2, 2017.
                                         <p></p>
                                   </li>
@@ -1163,7 +1163,8 @@
                                 <p></p>
                             </li>
                             <li> K. Veeraraghavan, J. Meza, S. Michelson, S. Panneerselvam, A. Gyori, D. Chou, S. Margulis, D. Obenshain, S. Padmanabha, A. Shah, Y. J. Song, and T. Xu,
-                                 Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently, In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (OSDI '18), October 2018.
+                                 <a class="paperlink" href="https://www.usenix.org/conference/osdi18/presentation/veeraraghavan" target="_blank">
+                                 Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently</a>, In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (OSDI '18), October 2018.
                               <p></p>
                             </li>
                             <li> (optional) Google's DiRT testing:
