--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -873,7 +873,7 @@
             </tbody>
         </table>
 
-        <h2>Observability</h2>
+        <h2>Failure Detection</h2>
 
       <table>
           <tbody>
