--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -905,6 +905,12 @@
                                     In Proceedings of the 16th Workshop on Hot Topics in Operating Systems (HotOS '17), May 2017.
                                   <p></p>
                               </li>
+                              <li> J. B. Leners, T. Gupta, M. K. Aguilera, and M. Walfish,
+                                  <a class="paperlink" href="https://www.usenix.org/system/files/conference/nsdi13/nsdi13-final90.pdf" target="_blank">Improving
+                                    Availability in Distributed Systems with Failure Informers</a>,
+                                    In Proceedings of the 10th USENIX Symposium Networked Systems Design and Implementation (NSDI '13), April 2013.
+                                  <p></p>
+                              </li>
                             </ul>
                           </li>
                       </ul>
