--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1065,9 +1065,9 @@
                                 In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
                                 <p></p>
                             </li>
-                            <li> (Tentative) P. D. Marinescu, R. Banabic, and G. Candea,
+                            <li> <s>P. D. Marinescu, R. Banabic, and G. Candea,
                                 <a class="paperlink" href="https://www.usenix.org/legacy/event/usenix10/tech/full_papers/Marinescu.pdf" target="_blank">An Extensible Technique for High-Precision Testing of Recovery Code</a>,
-                                In Proceedings of the 2010 USENIX Annual Technical Conference (USENIX ATC '10), June 2010.
+                                In Proceedings of the 2010 USENIX Annual Technical Conference (USENIX ATC '10), June 2010.</s>
                                 <p></p>
                             </li>
                             <li> <b>To grab an overview of industry practices of testing distributed systems, watch the video: </b> C. McCaffrey, <a class="paperlink" href="https://www.youtube.com/watch?v=kDh5BrqiGhI" target="_blank">The
@@ -1078,6 +1078,17 @@
                               C. McCaffrey,
                                 <a class="paperlink" href="https://cacm.acm.org/magazines/2016/2/197420-the-verification-of-a-distributed-system/abstract" target="_blank">The
                               Verification of a Distributed System</a>, Communications of the ACM (CACM), Vol. 59 No. 2, pp. 52-55, February 2016.
+                            </li>
+                            <li> (Optional) related papers:
+                                 <p></p>
+                              <ul>
+                                  <li> Y. Tian, K. Pei, S. Jana, and B. Ray,
+                                    <a class="paperlink" href="https://arxiv.org/pdf/1708.08559.pdf" target="_blank">DeepTest:
+                                      Automated Testing of Deep-Neural-Network-driven Autonomous Cars</a>,
+                                      In Proceedings of the 40th International Conference on Software Engineering (ICSE '18), May 2018.
+                                      <p></p>
+                                  </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
