--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -881,6 +881,12 @@
                   <td class="date"><a name="9tu">Tue<br>10/23</a></td>
                   <td class="papers">
                       <ul>
+                          <li>
+                            <b>
+                              <a class="paperlink" href="https://ece.illinois.edu/directory/profile/hnguye11" target="_blank">Frank</a> will co-lead the discussion.
+                              <p></p>
+                            </b>
+                          </li>
                           <li> P. Huang, C. Guo, J. R. Lorch, and L. Zhou,
                               <a class="paperlink" href="https://www.cs.jhu.edu/~huang/paper/panorama-osdi18.pdf" target="_blank">Capturing
                                 and Enhancing In Situ System Observability for Failure Detection</a>,
@@ -1109,7 +1115,7 @@
                             <li>
                               <b>
                                 <a class="paperlink" href="http://palani2.web.engr.illinois.edu/" target="_blank">Kartik</a>
-                                and <a class="paperlink" href="https://ece.illinois.edu/directory/profile/hnguye11" target="_blank">Frank</a> will lead the discussion.
+                                will co-lead the discussion.
                                 <p></p>
                               </b>
                             </li>
