faria and frank

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -883,7 +883,13 @@
                       <ul>
                           <li>
                             <b>
-                              <a class="paperlink" href="https://ece.illinois.edu/directory/profile/hnguye11" target="_blank">Frank</a> will co-lead the discussion.
+                              <a class="paperlink" href="http://kalim2.web.engr.illinois.edu/" target="_blank">Faria</a> will lead the discussion of FALCON.
+                              <p></p>
+                            </b>
+                          </li>
+                          <li>
+                            <b>
+                              <a class="paperlink" href="https://ece.illinois.edu/directory/profile/hnguye11" target="_blank">Frank</a> will lead the discussion of Panorama.
                               <p></p>
                             </b>
                           </li>
@@ -935,9 +941,8 @@
                         <ul>
                           <li>
                             <b>
-                            <a class="paperlink" href="http://kalim2.web.engr.illinois.edu/" target="_blank">Faria</a>
-                            and <a class="paperlink" href="http://bj2.web.engr.illinois.edu/" target="_blank">Beomyeol</a>
-                            will lead the discussion of the two papers.
+                            <a class="paperlink" href="http://bj2.web.engr.illinois.edu/" target="_blank">Beomyeol</a>
+                            will co-lead the discussion.
                             </b>
                             <p></p>
                           </li>
