--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -953,10 +953,10 @@
                                   In Proceedings of the 20th ACM Symposium on Operating Systems Principles (SOSP '05), October 2005.
                                 <p></p>
                             </li>
-                            <li> H. S. Gunawi, T. Do, P. Joshi, P. Alvaro, J. M. Hellerstein, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, K. Sen, and D. Borthakur,
-                                <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/nsdi11-fateDestini.pdf" target="_blank">
-                                  FATE and DESTINI: A Framework for Cloud Recovery Testing</a>,
-                                  In Proceedings of the 8th USENIX Symposium on Networked Systems Design and Implementation (NSDI '11), March 2011.
+                            <li> J. B. Leners, T. Gupta, M. K. Aguilera, and M. Walfish,
+                                <a class="paperlink" href="http://www.cs.utexas.edu/falcon/papers/albatross-eurosys2015.pdf" target="_blank">
+                                  Taming uncertainty in distributed systems with help from the network</a>,
+                                  In Proceedings of the 10th ACM European Conference on Computer Systems (EuroSys'15), April 2015.
                                   <p></p>
                             </li>
                             <li> (Optional) related papers:
