--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -943,7 +943,7 @@
                           <li>
                             <b>
                             <a class="paperlink" href="http://bj2.web.engr.illinois.edu/" target="_blank">Beomyeol</a>
-                            will co-lead the discussion.
+                            will lead the discussion of Albatross.
                             </b>
                             <p></p>
                           </li>
