--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -111,7 +111,7 @@
                         <a href="#14th">12/6</a>
                     </td>
                     <td>
-                        <a href="15tu">12/11</a>
+                        <a href="#15tu">12/11</a>
                         <br> &nbsp;
                     </td>
                 </tr>
@@ -1250,7 +1250,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
+                    <td class="date"><a name="13tu">Tue<br>11/27</a></td>
                     <td class="papers">
                         <ul>
                           <li>
@@ -1280,7 +1280,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="13tu">Tue<br>11/27</a></td>
+                    <td class="date"><a name="13th">Thu<br>11/29</a></td>
                     <td class="papers">
                         <ul>
 
