--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -69,15 +69,16 @@
             <li>Availability</li>
             <li>Hardware faults</li>
             <li>Software defects</li>
-            <li>Configuration and operation errors</li>
+            <li>Misconfigurations</li>
+            <li>Operation mistakes</li>
             <li>Network failures</li>
-            <li>Observability</li>
+            <li>Failure detection</li>
             <li>Failure recovery</li>
             <li>Finding bugs</li>
             <li>Software engineering</li>
             <li>Testing production systems</li>
             <li>Troubleshooting</li>
-            <li>Reliability auditing</li>
+            <li>Auditing</li>
             <li>Formal verification</li>
             <li>Client-side reliability</li>
         </ul>
