--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -959,6 +959,12 @@
                                   In Proceedings of the 10th ACM European Conference on Computer Systems (EuroSys'15), April 2015.
                                   <p></p>
                             </li>
+                            <li> <s>H. S. Gunawi, T. Do, P. Joshi, P. Alvaro, J. M. Hellerstein, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, K. Sen, and D. Borthakur,
+                                <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/nsdi11-fateDestini.pdf" target="_blank">
+                                  FATE and DESTINI: A Framework for Cloud Recovery Testing</a>,
+                                  In Proceedings of the 8th USENIX Symposium on Networked Systems Design and Implementation (NSDI '11), March 2011.</s>
+                                  <p></p>
+                            </li>
                             <li> (Optional) related papers:
                                  <p></p>
                               <ul>
