--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -437,6 +437,12 @@
                                 and Operating Systems (ASPLOS '16), April 2016.
                                   <p></p>
                                 </li>
+                                <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
+                                  R. H. Arpaci-Dusseau, and B. Liblit,
+                                <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
+                                In Proceedings of the 6th USENIX Conference on File and Storage Technologies (FAST '08), February 2008.
+                                  <p></p>
+                                </li>
                               </ul>
                             </li>
                         </ul>
@@ -960,15 +966,15 @@
                                   In Proceedings of the 10th ACM European Conference on Computer Systems (EuroSys'15), April 2015.
                                   <p></p>
                             </li>
-                            <li> <s>H. S. Gunawi, T. Do, P. Joshi, P. Alvaro, J. M. Hellerstein, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, K. Sen, and D. Borthakur,
-                                <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/nsdi11-fateDestini.pdf" target="_blank">
-                                  FATE and DESTINI: A Framework for Cloud Recovery Testing</a>,
-                                  In Proceedings of the 8th USENIX Symposium on Networked Systems Design and Implementation (NSDI '11), March 2011.</s>
-                                  <p></p>
-                            </li>
                             <li> (Optional) related papers:
                                  <p></p>
                               <ul>
+                                <li> H. S. Gunawi, T. Do, P. Joshi, P. Alvaro, J. M. Hellerstein, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, K. Sen, and D. Borthakur,
+                                    <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/nsdi11-fateDestini.pdf" target="_blank">
+                                      FATE and DESTINI: A Framework for Cloud Recovery Testing</a>,
+                                      In Proceedings of the 8th USENIX Symposium on Networked Systems Design and Implementation (NSDI '11), March 2011.
+                                      <p></p>
+                                </li>
                                 <li> M. Rinard, C. Cadar, D. Dumitran, D. M. Roy, T. Leu, and W. S. Beebee Jr,
                                     <a class="paperlink" href="https://www.eng.utah.edu//~csl-sem/old/s05/papers/rinard.pdf" target="_blank">Enhancing
                                       Server Availability and Security Through Failure-Oblivious Computing</a>,
@@ -982,19 +988,6 @@
                                       In Proceedings of the 6th Symposium on Operating
                                       Systems Design and Implementation (OSDI '04), December 2004.
                                     <p></p>
-                                </li>
-                                <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
-                                  R. H. Arpaci-Dusseau, and B. Liblit,
-                                <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
-                                In Proceedings of the 6th USENIX Conference on File and Storage Technologies (FAST '08), February 2008.
-                                  <p></p>
-                                </li>
-                                <li>C. R-. González, H. S. Gunawi, B. Liblit,
-                                  R. H. Arpaci-Dusseau, and
-                                  A. C. Arpaci-Dusseau,
-                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=1542506" target="_blank">Error Propagation Analysis for File Systems</a>,
-                                In Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation (PLDI '09), June 2009.
-                                  <p></p>
                                 </li>
                               </ul>
                             </li>
@@ -1082,11 +1075,6 @@
                             <li> K. Pei, Y. Cao, J. Yang, and S. Jana,
                                 <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3132785" target="_blank">DeepXplore: Automated Whitebox Testing of Deep Learning Systems</a>,
                                 In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
-                                <p></p>
-                            </li>
-                            <li> <s>P. D. Marinescu, R. Banabic, and G. Candea,
-                                <a class="paperlink" href="https://www.usenix.org/legacy/event/usenix10/tech/full_papers/Marinescu.pdf" target="_blank">An Extensible Technique for High-Precision Testing of Recovery Code</a>,
-                                In Proceedings of the 2010 USENIX Annual Technical Conference (USENIX ATC '10), June 2010.</s>
                                 <p></p>
                             </li>
                             <li> <b>To grab an overview of industry practices of testing distributed systems, watch the video: </b> C. McCaffrey, <a class="paperlink" href="https://www.youtube.com/watch?v=kDh5BrqiGhI" target="_blank">The
