--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -963,7 +963,7 @@
                             <li> J. B. Leners, T. Gupta, M. K. Aguilera, and M. Walfish,
                                 <a class="paperlink" href="http://www.cs.utexas.edu/falcon/papers/albatross-eurosys2015.pdf" target="_blank">
                                   Taming uncertainty in distributed systems with help from the network</a>,
-                                  In Proceedings of the 10th ACM European Conference on Computer Systems (EuroSys'15), April 2015.
+                                  In Proceedings of the 10th ACM European Conference on Computer Systems (EuroSys '15), April 2015.
                                   <p></p>
                             </li>
                             <li> (Optional) related papers:
@@ -1065,13 +1065,18 @@
                               </b>
                               <p></p>
                             </li>
+                            <li> O. Legunsen, W. U. Hassan, X. Xu, G. Rosu, and D. Marinov,
+                                <a class="paperlink" href="http://mir.cs.illinois.edu/legunsen/pubs/LegunsenETAL16SpecEval.pdf" target="_blank">How Good Are the Specs? A Study of the Bug-Finding
+                                Effectiveness of Existing Java API Specifications</a>,
+                                In Proceedings of the 31st IEEE/ACM International Conference on Automated Software Engineering (ASE '16), September 2016.
+                                <p></p>
+                            </li>
                             <li>
                               <b>
                                 <a href="https://www.linkedin.com/in/qingrong-chen-680155150/" target="_blank">Qingrong</a> will co-present DeepXplore and share his experiences working on ML reliability.
                               </b>
                               <p></p>
                             </li>
-
                             <li> K. Pei, Y. Cao, J. Yang, and S. Jana,
                                 <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3132785" target="_blank">DeepXplore: Automated Whitebox Testing of Deep Learning Systems</a>,
                                 In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
