--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1073,7 +1073,7 @@
                             </li>
                             <li>
                               <b>
-                                <a href="https://www.linkedin.com/in/qingrong-chen-680155150/" target="_blank">Qingrong</a> will co-present DeepXplore and share his experiences working on ML reliability.
+                                <a href="https://www.linkedin.com/in/qingrong-chen-680155150/" target="_blank">Qingrong</a> will present DeepXplore and share his experiences working on ML reliability.
                               </b>
                               <p></p>
                             </li>
