--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1153,9 +1153,9 @@
                                 Communications of the ACM (CACM), January 2018.
                                   <p></p>
                                 </li>
-                                <li>J. Allspaw,
-                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=2347751" target="_blank">Fault Injection in Production</a>,
-                                Communications of the ACM (CACM), October 2012.
+                                <li>A. Tseitlin,
+                                <a class="paperlink" href="https://cacm.acm.org/magazines/2013/8/166315-the-antifragile-organization/fulltext" target="_blank">The Antifragile Organization</a>,
+                                Communications of the ACM (CACM), August 2013.
                                   <p></p>
                                 </li>
                                 <li> V. Heorhiadi, S. Rajagopalan, H. Jamjoom, M. K. Reiter, and V. Sekar,
