revise for the talk

--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -71,16 +71,20 @@
             <li>Software defects</li>
             <li>Misconfigurations</li>
             <li>Operation mistakes</li>
-            <li>Network failures</li>
+            <li>Network disruptions</li>
+            <li>Bug detection</li>
+            <li>Software testing</li>
+            <li>Failure testing and chaos engineering</li>
+            <li>Load tests and drain tests</li>
             <li>Failure detection</li>
             <li>Failure recovery</li>
-            <li>Finding bugs</li>
-            <li>Software engineering</li>
-            <li>Testing production systems</li>
-            <li>Troubleshooting</li>
+            <li>Tracing</li>
+            <li>Diagnosis</li>
+          <!--
             <li>Auditing</li>
             <li>Formal verification</li>
             <li>Client-side reliability</li>
+          -->
         </ul>
     </p>
 
