--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -76,8 +76,8 @@
             <li>Software testing</li>
             <li>Failure testing and chaos engineering</li>
             <li>Load tests and drain tests</li>
-            <li>Failure detection</li>
-            <li>Failure recovery</li>
+            <li>Monitoring</li>
+            <li>Recovery</li>
             <li>Tracing</li>
             <li>Diagnosis</li>
           <!--
