--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1356,7 +1356,7 @@
             </tbody>
         </table>
 
-        <h2>Final Presentation</h2>
+        <h2>Final Exam</h2>
 
         <table>
             <tbody>
@@ -1365,8 +1365,8 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 1: Each team will do a 10 minute
-                                 presentation (no QA). </li>
+                            <li> <strike>Session 1: Each team will do a 10 minute
+                                 presentation (no QA).</strike> </li>
                         </ul>
 
                     </td>
@@ -1376,8 +1376,21 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Session 2: Each team will do a 10 minute
-                                 presentation (no QA). </li>
+                            <li> <strike>Session 2: Each team will do a 10 minute
+                                 presentation (no QA).</strike> </li>
+                        </ul>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="date"><a name="15tu">Tue<br>12/11</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> <b>(2--6pm)</b> <b>Oral exam:</b> each team shows
+                              end products: findings or system demos (5min)
+                              and answer questions (10min).
+                              Please refer to <a class="paperlink" href="https://piazza.com/class/jl77pjhw26f3q3">this post</a>.</li>
                         </ul>
 
                     </td>
