--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -1328,6 +1328,11 @@
       Conservative: Enhancing Failure Diagnosis with Proactive Logging</a>, In Proceedings of the 10th USENIX Symposium on Operating Systems Design and Implementation (OSDI '12), November 2012.
                                     <p></p>
                                 </li>
+                                <li> D. Yuan, H. Mai, W. Xiong, L. Tan, Y. Zhou, and S. Pasupathy,
+                                    <a class="paperlink" href="http://opera.ucsd.edu/paper/asplos10-sherlog.pdf" target="_blank">SherLog:
+      Error Diagnosis by Connecting Clues from Run-time Logs</a>,  In Proceedings of the 16th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS XVI), March 2011.
+                                    <p></p>
+                                </li>
                               </ul>
                             </li>
 
