--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
       I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
       where I learned dedication.
       Before UCSD, I worked in Germany for 1.5 years at <a href="http://www.uni-goettingen.de/"  target="_blank">Goettingen</a>.
+      <a href="cs591.pptx">slides</a>
     </p>
 
     <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what really matters to the living and the dead!
