fix bugs pointed out by mingyao

--- a/publication.html
+++ b/publication.html
@@ -64,7 +64,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="papers/imc18.pdf" target="_blank">pdf</a> | <a href="papers/imc18.ps" target="_blank">ps</a> | <a href="papers/imc18.bib" target="_blank">bib</a>]
 						<br>
-						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Yee Jiun Song
+						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
 						In Proceedings of the 2018 Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
 					</span>
