--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TBODY>
 						  <TR>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
-                <b>$ echo <font color="#E84A27">"I will teach CS 591: System and Networking Seminar in Spring 2019. Anyone interetsed in SysNet research is highly welcomed to join."</font></b>
+                <b>$ echo <font color="#E84A27">"I will teach CS 591: SysNet Seminar in Spring 2019. Anyone interetsed in SysNet research is welcomed."</font></b>
                 <br>
-		<b>$ echo <font color="#E84A27">"I will teach <a href="cs598-fa18", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="cs598-fa18/readings.html", target="_blank">schedule</a>."</font></b>
+		<b>$ echo "I will teach <a href="cs598-fa18", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="cs598-fa18/readings.html", target="_blank">schedule</a>."</b>
                 <br>
 		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
                 <br>
