--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TBODY>
 						  <TR>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
-                <b>$ echo <font color="#E84A27">"I'll teach CS 591: SysNet Seminar in Spring 2019. Anyone interested in SysNet research is welcomed."</font></b>
+                <b>$ echo <font color="#E84A27">"I'll teach <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591: Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcomed."</font></b>
                 <br>
 		<b>$ echo "I will teach <a href="cs598-fa18", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="cs598-fa18/readings.html", target="_blank">schedule</a>."</b>
                 <br>
